tethysapp/timeseries_viewer/public/css/main.css
ul li{
    font0size:20px;
}
#url_name {
width:700px;
}
#url_name.form-control{
    width:1000px;
}
#input_group{
    width:100px;
}


#stats-table{
    font-size:16px;
    width:100%;
    border: 1px solid black;
    margin-top: 20px;
    align:center
}
#stats-table th, td {
    border: 1px solid black;
    padding: 4px;
}
#metadata-list {
     font-size:20px;
}
#metadata-list ul {
    font-size:16px;
}

#inner-app-content {
    margin-right: 20px;
}

#app-content {
}

#app-header .tethys-app-header .icon-wrapper img
{
    height:50px;
    width:250px;
    border-radius: 0%;
}
#app-header .tethys-app-header {
    background: rgba(211, 211, 211, 1) !important;
    height: 50px !important;
    border-bottom: 2px solid black !important;
}
#app-header .tethys-app-header .app-title-wrapper .app-title{
    padding: 0px 0px 20px 500px !important;
}
#app-header .toggle-nav{
width:25px !important;
margin:10px !important;
}

#app-header .tethys-app-header .app-title-wrapper .app-title{
    padding: 20px 0px 20px 500px;
}

#app-content-wrapper #app-content #app-navigation {
  left: -350px;
  width: 350px;
}

#app-content-wrapper.show-nav #app-content {
  padding-right: 350px;
  -webkit-transform: translateX(-350px);
  -moz-transform: translateX(-350px);
  -ms-transform: translateX(-350px);
  -o-transform: translateX(-350px);
  transform: translateX(-350px);
  -webkit-transform: translate3d(350px, 0, 0);
  -moz-transform: translate3d(350px, 0, 0);
  -ms-transform: translate3d(350px, 0, 0);
  -o-transform: translate3d(350px, 0, 0);
   transform: translate3d(350px, 0, 0);
}
#app-header .tethys-app-header .icon-wrapper img{
    height: 48px !important;
}
#app-header .tethys-app-header .icon-wrapper {
    padding: 0px !important;
}
#title {
    color: #ff2283;
}

#byu-logo-container {
    float: left;
    position: absolute;
    bottom: 8px;
}
#byu-logo-container img {
    float: left;
    height: 50px;
    width: 50px;
}
#byu-logo-container span {
    position: relative;
    top: 25px;
    margin-left: 10px;
}

